# Vulkan_Android

./: gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/vulkan_android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  Render.cpp  Render.h  main.cpp
app/src/main/cpp/shaders/: shader.comp  shader.vert
app/src/main/java/com/example/vulkan_android/: MainActivity.kt
app/src/main/java/com/example/vulkan_android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/vulkan_android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
